removed some backups

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                                         srcset="https://pixboost.com/api/2/img/https://fuhsdgives.org/img/p1.jpg/resize?size=352&auth=MTcwNDcxNzM2NQ__">
                                 <source media="(min-width: 987px)"
                                         srcset="https://pixboost.com/api/2/img/https://fuhsdgives.org/img/p1.jpg/resize?size=292&auth=MTcwNDcxNzM2NQ__">
-                                <img alt="" class="content-image img-fluid d-block mx-auto" loading="lazy"
+                                <img alt="Medical doctor being tested" class="content-image img-fluid d-block mx-auto" loading="lazy"
                                      src="img/p1.jpg">
                             </picture>
                             <div class="content-details fadeIn-bottom">
