updated tracking info

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142125117-2"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142125117-3"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -12,7 +12,7 @@
 
         gtag('js', new Date());
 
-        gtag('config', 'UA-142125117-2');
+        gtag('config', 'UA-142125117-3');
     </script>
 
 
@@ -66,6 +66,8 @@
     </noscript>
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
+
+    <meta content="nEUycHtR94flHbpB4aXQEsCQj6I4I8RI_MOWvrEa88c" name="google-site-verification"/>
 </head>
 <body>
 
@@ -134,7 +136,8 @@
                 </button>
             </div>
             <div class="modal-body">
-                We, Santa Clara Gives, are students from all across the Santa Clara County school districts. We realized that it can be so easy
+                We, Santa Clara Gives, are students from all across the Santa Clara County school districts. We realized
+                that it can be so easy
                 to feel alone and helpless in this unique time, but as a Santa Clara community, we can make a meaningful
                 impact. We strive to support organizations and businesses in need of financial assistance due to the
                 COVID-19 pandemic together, as a Santa Clara community. As residents of this County, our lives have
@@ -331,7 +334,8 @@
                     Make A Difference</h1>
                 <p>
                     We strive to support organizations and businesses in need of financial assistance due to the
-                    COVID-19 pandemic together, as a Santa Clara community. As residents of Santa Clara County, our lives have
+                    COVID-19 pandemic together, as a Santa Clara community. As residents of Santa Clara County, our
+                    lives have
                     been changed drastically by the novel coronavirus. But, we can fight this pandemic together as a
                     community.
                 </p>
@@ -400,7 +404,7 @@
                 </div>
             </div>
             <div class="col-lg-6 contact-right">
-<!--                <script paypalExpress="false" src="https://donorbox.org/widget.js"></script>-->
+                <!--                <script paypalExpress="false" src="https://donorbox.org/widget.js"></script>-->
                 <iframe allowpaymentrequest="" frameborder="0" height="900px" id="donateForm" name="donorbox"
                         scrolling="no" seamless="seamless" src="https://donorbox.org/embed/fuhsdgives"
                         style="max-width: 500px; min-width: 310px; max-height:none!important"
