spacing + logic test

--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
                         <div style="height: 30px; width: 120px; position: relative; transform-origin: 0 0;">
                             <img alt="Santa Clara Gives logo" height="30" src="img/logo.png"
                                  style="position: absolute; left: 10%; top: 0; bottom: 0; transform: scale(1.2)">
+
+                            <!--                            <img alt="Santa Clara Gives logo" height="30" src="img/raw/pretty%20ok%20ngl.jpg"-->
+                            <!--                                 style="position: absolute; left: 10%; top: 0; bottom: 0; transform: scale(1.2)">-->
                         </div>
                     </a>
                 </div>
