--- a/index.html
+++ b/index.html
@@ -79,11 +79,14 @@
                 <div class="logo">
                     <a href="#home">
                         <div style="height: 30px; width: 120px; position: relative; transform-origin: 0 0;">
-                            <img alt="Santa Clara Gives logo" height="30" src="img/logo.png"
-                                 style="position: absolute; left: 10%; top: 0; bottom: 0; transform: scale(1.2)">
-
-                            <!--                            <img alt="Santa Clara Gives logo" height="30" src="img/raw/pretty%20ok%20ngl.jpg"-->
-                            <!--                                 style="position: absolute; left: 10%; top: 0; bottom: 0; transform: scale(1.2)">-->
+                            <picture>
+                                <source media="(min-width: 0px)"
+                                        srcset="https://pixboost.com/api/2/img/https://santaclaragives.org/img/n-logo.png/resize?size=120&auth=MTcwNDcxNzM2NQ__">
+                                <img alt="Santa Clara Gives logo" height="30" src="img/n-logo.png"
+                                     style="position: absolute; left: 10%; top: 0; bottom: 0; transform: scale(1.2)">
+                            </picture>
+<!--                            <img alt="Santa Clara Gives logo" height="30" src="img/n-logo.png"-->
+<!--                                 style="position: absolute; left: 10%; top: 0; bottom: 0; transform: scale(1.2)">-->
                         </div>
                     </a>
                 </div>
