--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
         <link href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" rel="stylesheet">
     </noscript>
     <link href="css/bootstrap.css" rel="stylesheet">
-    <link as="style" href="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css" onload="this.onload=null;this.rel='stylesheet'"
+    <link as="style" href="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css"
+          onload="this.onload=null;this.rel='stylesheet'"
           rel="preload">
     <noscript>
         <link href="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css" rel="stylesheet">
@@ -178,8 +179,8 @@
                        id="standings-table">
                     <thead>
                     <tr>
-                        <th data-field="standing" data-footer-formatter="totalFormatter">#</th>
-                        <th data-field="school" data-footer-formatter="totalFormatter">School Name</th>
+                        <th data-field="standing">#</th>
+                        <th data-field="school">School Name</th>
                         <th data-field="total" data-footer-formatter="totalFormatter">Dollars Donated</th>
                     </tr>
                     </thead>
@@ -492,8 +493,9 @@
                     Don’t see your school? Donate! All it takes to make a difference is YOUR donation. These trying
                     times test our humanity, which is why it is so essential for us to work together as a community. The
                     healthcare workers on the frontlines, vulnerable families, and small business owners rely on your
-                    help. Want to add your school to the list? Email us at <a href="mailto:santaclaragives+query@gmail.com"
-                                                                              style="color: #5f9ea0">santaclaragives@gmail.com</a>
+                    help. Want to add your school to the list? Email us at <a
+                        href="mailto:santaclaragives+query@gmail.com"
+                        style="color: #5f9ea0">santaclaragives@gmail.com</a>
                     to learn more.
                 </p>
                 <button class="primary-btn mt-20 text-uppercase" data-target="#standingsModal"
@@ -550,7 +552,7 @@
 <script src="js/jquery.magnific-popup.min.js"></script>
 <script src="js/jquery.nicescroll.min.js"></script>
 <script async id="zing-src" src="https://cdn.zingchart.com/zingchart.min.js"></script>
-<script src="js/main.js"></script>
 <script src="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
