--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
             <div class="modal-body">
                 <table data-search="true" data-search-text="" data-show-footer="true"
                        data-toggle="table"
+                       data-ajax="tableAjaxRequest"
                        data-url="https://coinwar.santaclaragives.org/standings"
                        id="standings-table">
                     <thead>
