--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <table data-search="true" data-search-text="" data-show-footer="true"
+                <table data-search="true" data-search-text=""
                        data-toggle="table"
                        data-ajax="tableAjaxRequest"
                        data-url="https://coinwar.santaclaragives.org/standings"
