got rid of total...

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <tr>
                         <th data-field="standing">#</th>
                         <th data-field="school">School Name</th>
-                        <th data-field="total" data-footer-formatter="totalFormatter">Dollars Donated</th>
+                        <th data-field="total">Dollars Donated</th>
                     </tr>
                     </thead>
                 </table>
