Push form changes

--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
             <div class="modal-body">
                 <table data-search="true" data-search-text=""
                        data-toggle="table"
+                       data-show-refresh="true"
                        data-ajax="tableAjaxRequest"
                        data-url="https://coinwar.santaclaragives.org/standings"
                        id="standings-table">
@@ -525,9 +526,9 @@
             <div class="footer-social">
                 <a href="https://www.instagram.com/santaclaragives/" rel="noopener" target="_blank"><i
                         class="fa fa-instagram"></i></a>
-                <a href="#0"><i class="fa fa-facebook-f"></i></a>
+                <a href="https://facebook.com/santaclaragives" rel="noopener" target="_blank"><i class="fa fa-facebook-f"></i></a>
                 <a href="mailto:santaclaragives@gmail.com"><i class="fa fa-envelope"></i></a>
-                <a href="#0"><i class="fa fa-phone fa-flip-horizontal"></i></a>
+                <a href="#0"><i class="fa fa-files-o"></i></a>
             </div>
             <p class="footer-text m-0" id="copyright"></p>
             <p class="footer-text mt-1 mb-0">
@@ -553,6 +554,7 @@
 <script src="js/jquery.magnific-popup.min.js"></script>
 <script src="js/jquery.nicescroll.min.js"></script>
 <script async id="zing-src" src="https://cdn.zingchart.com/zingchart.min.js"></script>
+<script async id="clip-src" src="js/vendor/clipboard.min.js"></script>
 <script src="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.js"></script>
 <script src="js/main.js"></script>
 </body>
