graph loading update + thank you zoom update

--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
         <link href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" rel="stylesheet">
     </noscript>
     <link href="css/bootstrap.css" rel="stylesheet">
-    <link as="style" href="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css"
+    <link as="style" href="css/bootstrap-table.min.css"
           onload="this.onload=null;this.rel='stylesheet'"
           rel="preload">
     <noscript>
-        <link href="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css" rel="stylesheet">
+        <link href="css/bootstrap-table.min.css" rel="stylesheet">
     </noscript>
     <link href="css/main.css" rel="stylesheet">
 </head>
@@ -555,7 +555,7 @@
 <script src="js/jquery.nicescroll.min.js"></script>
 <script async id="zing-src" src="https://cdn.zingchart.com/zingchart.min.js"></script>
 <script async id="clip-src" src="js/vendor/clipboard.min.js"></script>
-<script src="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.js"></script>
+<script src="js/vendor/bootstrap-table.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
