--- a/index.html
+++ b/index.html
@@ -72,12 +72,7 @@
         <link href="css/bootstrap-table.min.css" rel="stylesheet">
     </noscript>
     <link href="css/main.css" rel="stylesheet">
-
-    <!-- BEGIN SHAREAHOLIC CODE -->
-    <link rel="preload" href="https://cdn.shareaholic.net/assets/pub/shareaholic.js" as="script" />
-    <meta name="shareaholic:site_id" content="d28995618f8ddc58d5e6ca1cc63a31c2" />
-    <script data-cfasync="false" async src="https://cdn.shareaholic.net/assets/pub/shareaholic.js"></script>
-    <!-- END SHAREAHOLIC CODE -->
+    <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=5e89b32c59bd1e001952149e&product=inline-share-buttons" async="async"></script>
 </head>
 <body>
 
@@ -214,7 +209,7 @@
                 </button>
             </div>
             <div class="modal-body">
-
+                <div class="sharethis-inline-share-buttons"></div>
             </div>
             <div class="modal-footer flex-row justify-content-end align-items-center">
                 <a class="primary-btn mt-20 text-uppercase" href="#cModal" style="margin: 0">Close<span
