added some meta tags

--- a/index.html
+++ b/index.html
@@ -34,17 +34,33 @@
     <link href="/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
     <link href="/site.webmanifest" rel="manifest">
 
+    <!-- COMMON TAGS -->
+    <meta charset="utf-8">
+    <title>Santa Clara Gives - Give Back to the Community</title>
+    <!-- Search Engine -->
+    <meta name="description" content="Santa Clara Gives strive to support organizations and local businesses suffering from the COVID-19 pandemic. Contribute back to the community by donating today!">
+    <meta name="image" content="https://santaclaragives.org/img/s-about-img.jpg">
+    <!-- Schema.org for Google -->
+    <meta itemprop="name" content="Santa Clara Gives - Give Back to the Community">
+    <meta itemprop="description" content="Santa Clara Gives strive to support organizations and local businesses suffering from the COVID-19 pandemic. Contribute back to the community by donating today!">
+    <meta itemprop="image" content="https://santaclaragives.org/img/s-about-img.jpg">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Santa Clara Gives - Give Back to the Community">
+    <meta name="twitter:description" content="Santa Clara Gives strive to support organizations and local businesses suffering from the COVID-19 pandemic. Contribute back to the community by donating today!">
+    <meta name="twitter:image:src" content="https://santaclaragives.org/img/s-about-img.jpg">
+    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+    <meta name="og:title" content="Santa Clara Gives - Give Back to the Community">
+    <meta name="og:description" content="Santa Clara Gives strive to support organizations and local businesses suffering from the COVID-19 pandemic. Contribute back to the community by donating today!">
+    <meta name="og:image" content="https://santaclaragives.org/img/s-about-img.jpg">
+    <meta name="og:url" content="https://santaclaragives.org">
+    <meta name="og:site_name" content="Santa Clara Gives">
+    <meta name="og:type" content="website">
     <!-- Author Meta -->
     <meta content="Santa Clara Gives" name="author">
-    <!-- Meta Description -->
-    <meta content="Santa Clara Gives strive to support organizations and businesses in need of financial assistance due to the COVID-19 pandemic together as a Santa Clara County community. "
-          name="description">
     <!-- Meta Keyword -->
     <meta content="Santa Clara, Covid, coronavirus, charity, donation, community" name="keywords">
-    <!-- meta character set -->
-    <meta charset="UTF-8">
-    <!-- Site Title -->
-    <title>Santa Clara Gives - Give Back to the Community</title>
+
     <link as="style" href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700&display=swap"
           onload="this.onload=null;this.rel='stylesheet'" rel="preload">
     <noscript>
