added property... properties to meta tags

--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
     <meta name="twitter:description" content="Santa Clara Gives strive to support organizations and local businesses suffering from the COVID-19 pandemic. Contribute back to the community by donating today!">
     <meta name="twitter:image:src" content="https://santaclaragives.org/img/s-about-img.jpg">
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta name="og:title" content="Santa Clara Gives - Give Back to the Community">
-    <meta name="og:description" content="Santa Clara Gives strive to support organizations and local businesses suffering from the COVID-19 pandemic. Contribute back to the community by donating today!">
-    <meta name="og:image" content="https://santaclaragives.org/img/s-about-img.jpg">
-    <meta name="og:url" content="https://santaclaragives.org">
-    <meta name="og:site_name" content="Santa Clara Gives">
-    <meta name="og:type" content="website">
+    <meta name="og:title" property="og:title" content="Santa Clara Gives - Give Back to the Community">
+    <meta name="og:description" property="og:description" content="Santa Clara Gives strive to support organizations and local businesses suffering from the COVID-19 pandemic. Contribute back to the community by donating today!">
+    <meta name="og:image" property="og:image" content="https://santaclaragives.org/img/s-about-img.jpg">
+    <meta name="og:url" property="og:url" content="https://santaclaragives.org">
+    <meta name="og:site_name" property="og:site_name" content="Santa Clara Gives">
+    <meta name="og:type" property="og:type" content="website">
     <!-- Author Meta -->
     <meta content="Santa Clara Gives" name="author">
     <!-- Meta Keyword -->
-    <meta content="Santa Clara, Covid, coronavirus, charity, donation, community" name="keywords">
+    <meta content="Santa Clara, Covid, coronavirus, charity, donation, community, nonprofit" name="keywords">
 
     <link as="style" href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700&display=swap"
           onload="this.onload=null;this.rel='stylesheet'" rel="preload">
