--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="js/jquery.magnific-popup.min.js"></script>
 <script src="js/jquery.nicescroll.min.js"></script>
-<script async id="zing-src" src="https://cdn.zingchart.com/zingchart.min.js"></script>
+<script async id="zing-src" src="js/vendor/zingchart.min.js"></script>
 <script async id="clip-src" src="js/vendor/clipboard.min.js"></script>
 <script src="js/vendor/bootstrap-table.min.js"></script>
 <script src="js/main.js"></script>
