updated promo pic + testing "add this" service

--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
                     Make A Difference</h1>
                 <p>
                     We strive to support organizations and businesses in need of financial assistance due to the
-                    COVID-19 pandemic together, as a Santa Clara County community. As residents of Santa Clara County,
+                    COVID-19 pandemic together, as a <span style="color:#5f9ea0">Santa Clara County</span> community. As residents of Santa Clara County,
                     our lives have been changed drastically by the novel coronavirus. But, we can fight this pandemic
                     together.
                 </p>
@@ -703,6 +703,10 @@
                     href="http://www.bayecho.org/" rel="noopener" target="_blank">BayEcho</a>, a 501(c)(3) nonprofit
                 handling our finances.
             </p>
+            <p class="footer-text mt-1 mb-0">
+                We are supported by <a
+                    href="https://www.apapa.org/" rel="noopener" target="_blank">APAPA</a>, a non-profit and grassroots organization
+            </p>
         </div>
     </div>
 </footer>
@@ -724,5 +728,9 @@
 <script id="clip-src" src="js/vendor/clipboard.min.js"></script>
 <script src="js/vendor/bootstrap-table.min.js"></script>
 <script src="js/main.js"></script>
+
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="https://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5e8af23c6384f3b6"></script>
+
 </body>
 </html>
