auto open share modal after donation on computer

--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
                        data-search-text=""
                        data-show-refresh="true"
                        data-toggle="table"
+                       data-pagination="true"
                        data-url="https://coinwar.santaclaragives.org/standings"
                        id="standings-table">
                     <thead>
@@ -238,7 +239,9 @@
                     </picture>
                     <label for="shareMessage" style="display: none">Send the following to your friends/family!</label>
                     <!-- Target -->
-                    <textarea id="shareMessage" onkeyup="textAreaAdjust(this)" style="overflow:hidden" class="w-100">SDFHISHFIUEHFIUHW EFIUWE HFIUWEHIUHWEIUF HWEIU HIUWEFH IUWE HIUWH EFIUHWEIU HWEF HIWEU FOIEW HFOIUGE FOIUW GFOUEW GOIFG QEWIO GWEIOU FGIWYOE GFOIUWE GOIU GFOIEW GOFIUEWGOFIWGEIOU FGWOEIU FGOIUWE GFOIUWE GFOIUW EOIFUGWEOIU FGIOWUE GOIUWEF GOIUWE FGOIUEW FOIU GFWEOI GIOUWEG FOIEU GEWIUO GFIOUEWGF</textarea>
+                    <textarea class="w-100" id="shareMessage" onkeyup="textAreaAdjust(this)" style="overflow:hidden">
+
+                    </textarea>
 
                 </div>
 
@@ -265,7 +268,7 @@
                        rel="noopener" target="_blank">
                         <div class="resp-sharing-button resp-sharing-button--wechat resp-sharing-button--large">
                             <div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
-                                <img src="img/svg/wechat.svg" style="width: 14px" width="14px" alt="wechat logo image">
+                                <img alt="wechat logo image" src="img/svg/wechat.svg" style="width: 14px" width="14px">
                             </div>
                             <div>Share on WeChat</div>
                         </div>
@@ -352,7 +355,7 @@
                        href="javascript:void(0)">
                         <div class="resp-sharing-button resp-sharing-button--clipboard resp-sharing-button--large">
                             <div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
-                                <img src="img/svg/clippy.svg" style="width: 14px" width="14px" alt="clippy image">
+                                <img alt="clippy image" src="img/svg/clippy.svg" style="width: 14px" width="14px">
                             </div>
                             <div>Copy to Clipboard</div>
                         </div>
@@ -548,7 +551,8 @@
                     Make A Difference</h1>
                 <p>
                     We strive to support organizations and businesses in need of financial assistance due to the
-                    COVID-19 pandemic together, as a <span style="color:#5f9ea0">Santa Clara County</span> community. As residents of Santa Clara County,
+                    COVID-19 pandemic together, as a <span style="color:#5f9ea0">Santa Clara County</span> community. As
+                    residents of Santa Clara County,
                     our lives have been changed drastically by the novel coronavirus. But, we can fight this pandemic
                     together.
                 </p>
@@ -713,7 +717,8 @@
             </p>
             <p class="footer-text mt-1 mb-0">
                 We are supported by <a
-                    href="https://www.apapa.org/" rel="noopener" target="_blank">APAPA</a>, a non-profit and grassroots organization
+                    href="https://www.apapa.org/" rel="noopener" target="_blank">APAPA</a>, a non-profit and grassroots
+                organization
             </p>
         </div>
     </div>
